--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
-notifications:
-  email: false
-node_js:
-  - 8
-before_script:
-  - npm prune
+cache:
+  directories:
+    - ~/.npm
+node_js: lts/*
+addons:
+  chrome: stable
 after_success:
   - npm run semantic-release
 branches:
