--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node bin/glitch-deploy",
     "test": "standard",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
@@ -26,18 +26,18 @@
   },
   "homepage": "https://github.com/gr2m/glitch-deploy#readme",
   "dependencies": {
-    "axios": "^0.16.2",
-    "debug": "^3.0.1",
-    "envalid": "^4.0.0",
+    "axios": "^0.18.0",
+    "debug": "^3.1.0",
+    "envalid": "^4.1.4",
     "github-url-from-git": "^1.5.0",
     "github-username-regex": "^1.0.0",
-    "inquirer": "^3.2.2",
-    "lodash": "^4.17.4",
-    "puppeteer": "^0.10.1"
+    "inquirer": "^5.1.0",
+    "lodash": "^4.17.5",
+    "puppeteer": "^0.13.0"
   },
   "devDependencies": {
-    "standard": "^10.0.3",
-    "semantic-release": "^7.0.2"
+    "standard": "^11.0.1",
+    "semantic-release": "^15.1.3"
   },
   "optionalDependencies": {
     "keytar": "^4.0.4"
