--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gr2m/glitch-deploy.git"
+    "url": "https://github.com/glitch-tools/glitch-deploy.git"
   },
   "keywords": [
     "glitch",
@@ -22,9 +22,9 @@
   "author": "Gregor Martynus (https://twitter.com/gr2m)",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/gr2m/glitch-deploy/issues"
+    "url": "https://github.com/glitch-tools/glitch-deploy/issues"
   },
-  "homepage": "https://github.com/gr2m/glitch-deploy#readme",
+  "homepage": "https://github.com/glitch-tools/glitch-deploy#readme",
   "dependencies": {
     "axios": "^0.18.0",
     "debug": "^3.1.0",
